--- a/visualsbt/public/index.html
+++ b/visualsbt/public/index.html
@@ -9,10 +9,9 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nuosu+SIL&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Belleza&family=Caudex&family=Cinzel+Decorative&family=DM+Sans&family=Italiana&family=Nuosu+SIL&family=Space+Grotesk:wght@300&family=Ultra&display=swap" rel="stylesheet">
 
   <title>Visuals By Thomas</title>
 </head>
