--- a/visualsbt/public/index.html
+++ b/visualsbt/public/index.html
@@ -10,8 +10,8 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Belleza&family=Caudex&family=Cinzel+Decorative&family=DM+Sans&family=Italiana&family=Nuosu+SIL&family=Space+Grotesk:wght@300&family=Ultra&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Belleza&family=Caudex&family=Cinzel+Decorative&family=DM+Sans&family=Fredericka+the+Great&family=Italiana&family=Nuosu+SIL&family=Space+Grotesk:wght@300&family=Staatliches&display=swap" rel="stylesheet">
 
   <title>Visuals By Thomas</title>
 </head>
